--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "@testing-library/user-event": "^13.5.0",
     "big.js": "^6.2.1",
     "gh-pages": "^5.0.0",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"    
+    "sort-by": "^1.2.0",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "predeploy": "npm run build",
